<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/education"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SelectionDesignation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <androidx.cardview.widget.CardView

            android:id="@+id/cardView6"
            android:layout_width="210dp"
            android:layout_height="210dp"
            android:background="@drawable/custom_edittext"
            app:cardCornerRadius="50dp"
            app:cardElevation="20dp"
            android:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/cr2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5">

                </ImageView>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/custom_edittext"
        app:cardCornerRadius="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout5"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="ExtraText,MissingConstraints">\

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/principle"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/purple"
                android:text="@string/PRINCIPAL"
                android:textSize="20sp"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toTopOf="@+id/hod"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <Button
                android:id="@+id/teacher"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/purple"
                android:text="@string/TEACHER"
                android:textSize="20sp"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toTopOf="@+id/student"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hod"
                app:layout_constraintVertical_bias="0.5" />

            <Button
                android:id="@+id/student"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/purple"
                android:text="@string/STUDENT"
                android:textSize="20sp"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toTopOf="@+id/Developers"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/teacher"
                app:layout_constraintVertical_bias="0.5" />

            <Button
                android:id="@+id/Developers"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/purple"
                android:text="@string/DEVELOPERS"
                android:textSize="20sp"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/student"
                app:layout_constraintVertical_bias="0.5" />

            <Button
                android:id="@+id/hod"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/purple"
                android:text="@string/HOD"
                android:textSize="20sp"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toTopOf="@+id/teacher"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/principle"
                app:layout_constraintVertical_bias="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        /

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>