<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/education"
    tools:context=".PrincipalAttendanceView">
    <androidx.cardview.widget.CardView
        android:id="@+id/attendance"
        android:layout_width="170dp"
        android:layout_height="150dp"
        app:cardCornerRadius="30dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/student"
        app:layout_constraintTop_toBottomOf="@+id/teacher"
        app:layout_constraintVertical_bias="0.5" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/attendances"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:src="@drawable/attendance"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                android:contentDescription="TODO">

            </ImageButton>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Attendance"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/attendances"
                app:layout_constraintVertical_bias="0.5" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:background="@drawable/custom_edittext"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5">

            <Button
                android:id="@+id/TAKEATTENDANCE"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:textAllCaps="false"
                android:backgroundTint="@color/purple"
                android:text="@string/take_attendance"
                android:textSize="20sp"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toTopOf="@+id/NSOSTUDENTS"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <Button
                android:id="@+id/NSOSTUDENTS"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:textAllCaps="false"
                android:backgroundTint="@color/purple"
                android:text="@string/nso_student"
                android:textSize="20sp"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toTopOf="@+id/CHECKATTENDANCE"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TAKEATTENDANCE"
                app:layout_constraintVertical_bias="0.5" />

            <Button
                android:id="@+id/CHECKATTENDANCE"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:textAllCaps="false"
                android:backgroundTint="@color/purple"
                android:text="@string/check_attendance"
                android:textSize="20sp"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toTopOf="@+id/DELETEATTENDANCE"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/NSOSTUDENTS"
                app:layout_constraintVertical_bias="0.5" />

            <Button
                android:id="@+id/DELETEATTENDANCE"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:backgroundTint="@color/purple"
                android:text="@string/delete_attendance"
                android:textSize="20sp"
                app:cornerRadius="20dp"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/CHECKATTENDANCE"
                app:layout_constraintVertical_bias="0.5" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>