<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/education"
    tools:context=".PrincilpalHodView">


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <androidx.cardview.widget.CardView
            android:id="@+id/hodcardView"
            android:layout_width="170dp"
            android:layout_gravity="center|top"
            android:layout_marginTop="30dp"
            android:layout_height="150dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="30dp"
            app:layout_constraintBottom_toTopOf="@+id/student"
            app:layout_constraintEnd_toStartOf="@+id/teacher"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.5" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/hod"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:src="@drawable/hod"
                    app:layout_constraintBottom_toTopOf="@+id/textView18"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5"
                    android:contentDescription="TODO">

                </ImageButton>

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="HOD"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/hod"
                    app:layout_constraintVertical_bias="0.5">

                </TextView>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_margin="30dp"
            android:background="@drawable/custom_edittext"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="MissingConstraints">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <Button
                    android:id="@+id/DELETE"
                    android:layout_width="250dp"
                    android:layout_height="60dp"
                    android:backgroundTint="@color/purple"
                    android:text="@string/DELETE"
                    android:textSize="20sp"
                    app:cornerRadius="20dp"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toTopOf="@+id/UPDATE"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ADD"
                    app:layout_constraintVertical_bias="0.5" />

                <Button
                    android:id="@+id/ADD"
                    android:layout_width="250dp"
                    android:layout_height="60dp"
                    android:layout_margin="12dp"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/purple"
                    android:text="@string/Add"
                    android:textSize="20sp"
                    app:cornerRadius="20dp"
                    app:layout_constraintBottom_toTopOf="@+id/DELETE"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5" />

                <Button
                    android:id="@+id/UPDATE"
                    android:layout_width="250dp"
                    android:layout_height="60dp"
                    android:layout_margin="12dp"
                    android:backgroundTint="@color/purple"
                    android:text="@string/UPDATE"
                    android:textSize="20sp"
                    app:cornerRadius="20dp"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toTopOf="@+id/RECORD"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/DELETE"
                    app:layout_constraintVertical_bias="0.5" />

                <Button
                    android:id="@+id/RECORD"
                    android:layout_width="250dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="12dp"
                    android:backgroundTint="@color/purple"
                    android:text="@string/record"
                    android:textSize="20sp"
                    app:cornerRadius="20dp"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/UPDATE"
                    app:layout_constraintVertical_bias="0.5" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>